change dish item width to prevent horizontal scroll bar

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -503,8 +503,7 @@ footer nav ul li a {
   border-radius: 10px 10px 10px 10px;
   padding-left: 2%;
   margin-bottom: 2%;
-  margin-right: 2%;
-  width: 100%;
+  width: 95%;
   display: flex;
   justify-content: space-around;
 }
