--- a/sass/components/_dish.scss
+++ b/sass/components/_dish.scss
@@ -4,9 +4,8 @@
     border-radius: 10px 10px 10px 10px;
     padding-left: 2%;
     margin-bottom: 2%;
-    margin-right: 2%;
 
-    width: 100%;
+    width: 95%;
 
     display: flex;
     justify-content: space-around;
